--- a/GardenWeb/Views/GardenSpace/_Modal.cshtml
+++ b/GardenWeb/Views/GardenSpace/_Modal.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- Modal -->
-<div class="modal fade" id="gardenSpaceModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="gardenSpaceModal" tabindex="-1" aria-labelledby="GardenSpaceModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
