ui 변경 - 프로젝트 color 추가, - 프로젝트 수정 추가.

--- a/GardenWeb/Views/GardenSpace/Detail.cshtml
+++ b/GardenWeb/Views/GardenSpace/Detail.cshtml
@@ -74,21 +74,34 @@
                     <div class="row mb-2">
                         <label class="col-sm-3 col-form-label fw-bold text-danger">
                             <i class="bi-envelope-fill me-2"></i>
+                            색상
+                        </label>
+                        <div class="col-sm-9">
+                            <span class="mt-2 btn btn-md" id="detail_space_color"></span>
+                        </div>
+                    </div>
+
+                    <div class="row mb-2">
+                        <label class="col-sm-3 col-form-label fw-bold text-danger">
+                            <i class="bi-envelope-fill me-2"></i>
                             초대로만 받기
                         </label>
-                        <div class="col-sm-3" >
+                        <div class="col-sm-9">
                             <input type="text" value="true" id="detail_space_only_invite" class="form-control-plaintext" disabled />
                         </div>
+                    </div>
 
+                    <div class="row mb-2">
                         <label class="col-sm-3 col-form-label fw-bold text-danger">
                             <i class="bi-eye-fill me-2"></i>
                             공개여부
                         </label>
-                        <div class="col-sm-3">
+                        <div class="col-sm-9">
                             <input type="text" value="비공개" id="detail_space_is_private" class="form-control-plaintext" disabled />
                         </div>
                     </div>
-                       <div class="row mb-2">
+
+                    <div class="row mb-2">
                         <label class="col-sm-3 col-form-label fw-bold text-danger">
                             <i class="bi-pencil-fill me-2"></i>
                             설명
