인원 초대하기 기능 추가

--- a/GardenWeb/Views/GardenSpace/_DetailForParticipant.cshtml
+++ b/GardenWeb/Views/GardenSpace/_DetailForParticipant.cshtml
@@ -36,7 +36,7 @@
                     <button class="btn btn-link float-end p-0">
                         <i class="bi bi-x-circle-fill text-danger ms-2"></i>
                     </button>
-                    <button class="btn btn-link float-end p-0">
+                    <button type="button" class="btn btn-link float-end p-0">
                         <i class="bi bi-check-circle-fill text-primary"></i>
                     </button>
 
@@ -85,7 +85,7 @@
                 <div class="card-header bg-white fw-bold">
                     <i class="bi bi-envelope-fill me-2" style="color:#198754"></i>
                     초대 현황(발신)
-                    <button class="btn btn-link float-end p-0">
+                    <button class="btn btn-link float-end p-0" type="button" onclick="RenderUserInviteModal()" data-bs-toggle="modal" data-bs-target="#gardenSpaceModal">
                         <i class="bi bi-person-plus-fill"></i>
                     </button>
                 </div>
